--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@ body {
 
 a {
     text-decoration: none;
-    color: #0a2c47;;
+    color: #4f6070;
 }
 
 a:hover {
-    color:#009245;
+    color:#5ac0c5;
   }
 
 p {
@@ -29,15 +29,50 @@ p {
     margin-bottom: 1em;
 }
 
+h1 {
+    color: #4f6070;
+    font-weight: 600;
+    font-size: 3em;
+}
+
 h2 {
-    color: black;
-    font-size:1.5em;
-    padding-bottom:.2em;
+    color: #4f6070;
+    font-size:2.5em;
+    padding-bottom: .1em;
+    font-weight:500;
   }
+
+h3 {
+    color:#5ac0c5;
+    font-size:1.5em;
+    padding-bottom: .2em;
+    font-weight:400;
+}
+
+h4 {
+    color: #4f6070;
+    font-size: 1.3em;
+    font-weight:600;
+}
 
 img {
     max-width: 100%;
 }
+
+.break {
+    flex-basis:100%;
+    height:25px;
+}
+
+form {
+    max-width: 800px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: #f4f7f8;
+    border-radius: 8px;
+  }
+
+  
 
 /* Horizontal Nav */
 
@@ -55,7 +90,7 @@ img {
 }
 
 .nav-main li a:hover {
-    color: #009245;
+    color: #5ac0c5;
 }
 
 .nav-main ul {
@@ -143,7 +178,7 @@ img {
 }
 
 .nav-sidebar a:hover {
-    color: #009245;
+    color: #5ac0c5;
 }
 
 .menu-btn {
@@ -242,6 +277,7 @@ img {
     cursor: pointer;
     padding: 13px 15px;
     border-radius: 50%;
+    outline: none;
 }
 
 .buttons button:hover {
@@ -270,7 +306,7 @@ img {
 }
   
 .logo {
-    margin: 0 auto 5em auto;
+    margin: 0 auto 3em auto;
     z-index:10;
     width: 300px;
 }
@@ -282,24 +318,44 @@ img {
 /* Row 1 aka Featured Article */
 
 .row1 {
-    display:flex;
+    background-color:#f8f9fd;
+    padding:2em;
 }
 
-.featured {
-    order:2;
-    padding: 2em 0 0 1em;
-    margin-right: 1em;
-  }
+.featured p {
+    color: #4f6070;
+}
 
 .featured-img {
-    max-width:200px;
-    max-height:200px;
+    max-width:350px;
+    max-height:300px;
     flex-shrink: 0;
-    order:1;
-    margin: 0 1em 0 2em;
-    padding: 2em 0 0 0;
+    order:2;
+    margin: 0 0 0 3em;
+    padding: 3.5em 1.5em 0 0;
     display:none;
   }
+
+.page-buttons {
+    padding: 1em 2em;
+    background-color:#fed45c;
+    color:#4f6070;
+    border: none;
+    border-radius: 5px;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.page-buttons:hover {
+    background-color: #4f6070;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+} 
+
+.center {
+    text-align:center;
+    margin: 0 auto;
+}
 
 /* What's New? */
 
@@ -335,8 +391,111 @@ img {
 /* Row 2 */
 
 .row2 {
+    background-color:#4f6070;
     display:flex;
-    padding: 0 3em;
+    padding: 2em 0 2em 0;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.stats {
+    max-width: 135px;
+    max-height: 80px;
+    margin:1em auto;
+}
+
+
+.numbers {
+    font-size: 70px;
+    color:#5ac0c5;
+}
+
+/* Row 3 */
+
+.col2 {
+	padding-right: 1.5em;
+    padding-left: 1.5em;
+    color: #4f6070;
+}
+
+.about {
+    margin: 0 auto;
+    text-align: center;
+    padding: 4em 1em 0 1em;
+}
+
+.row3 {
+    padding-bottom:4em;
+}
+
+.row3 hr {
+    margin: 1em auto;
+    width: 10%;
+}
+
+.numbers2 {
+    font-size: 60px;
+    font-weight:700;
+}
+
+/* Row 4 */
+
+.row4 {
+    width:100%;
+    height:500px;
+    background: url('../img/testimonial-bkg.jpg') no-repeat center center/cover;
+    padding-top:8em;
+}
+
+.testimonial {
+    margin: auto;
+    width: 90%;
+    color: #fff !important;
+    text-align: center; 
+}
+
+.testimonial h2 {
+    font-size:2em;
+}
+
+.row4 hr {
+    margin: 1em auto;
+    width: 10%;
+}
+
+/* Row 5 */
+
+.row5 {
+    background-color:#f8f9fd;
+    justify-content: center;
+    padding: 4em 2em;
+}
+
+.featured-img-2 {
+    max-width:350px;
+    max-height:350px;
+    flex-shrink: 0;
+
+    display:none;
+  }
+
+
+/* Row 6 */
+
+.row6 {
+    justify-content: center;
+    padding: 4em 0 4em 0;
+}
+
+
+/* Footer */
+
+.footer {
+    background: #4f6070;
+    color: #fff;
+    text-align: center;
+    padding: 1.5em 0;
+    margin-top:3em;
 }
 
 /* Media Queries */
@@ -374,28 +533,109 @@ img {
 
     .featured-img {
         display:block;
+        margin-top: 1em;
+    }
+
+    .featured-img-2 {
+        display:block;
     }
 
     .featured {
-        margin-right: 2em;
+        margin-left:2em;
+        width:60%;
       }
 
-    .row2 {
-        margin: 0 3em;
+
+    .row1 {
+        display:flex;
+        padding-left:0;
+        padding-right:0;   
+    }
+
+
+    .row3 {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+        margin: 0 auto;
+        padding-top: 3em;
+        padding-bottom:4.5em;
+    }
+
+    .row4 {
+        display: flex;
+        justify-content: center;
+        padding:0;
+    }
+
+    .row5 {
+        display:flex;
+    }
+
+    .row6 {
+        display: flex;
+        width:75%;
+        margin: 0 auto;
+    }
+
+    .testimonial {
+        width: 70%;
+    }
+
+    .col2 {
+        flex: 1 50%;
+    }
+
+    .about {
+        padding-top:1.5em;
+    }
+
+    .pricing {
+        width:50%;
+        padding-right:4em;
     }
 }
 
 @media (min-width: 1030px) {
     .row1 {
-        background-color:#fff;
         z-index:10;
-        width:70%;
-        margin: -7em auto 0; 
-        align-content:center;
+        width:85%;
+        margin: -6em auto 5em; 
+    }
+
+    .row2 {
+        z-index:5;
+        margin-top:-6.5em;
+        flex-direction:row;
+        padding: 4.5em 0 4em 0;
+    }
+
+    .row3 {
+        width:80%;
+    }
+
+    .row5 {
+        padding: 4em 0;
+    }
+    
+    .col2 {
+        flex-basis: 0;
     }
 
     .banner {
         margin-bottom: 2.5em;
     }
+
+    .testimonial {
+        width: 50%;
+    }
+}
+
+@media (max-width: 1030px) {
+
+    .featured-img-2 {
+        padding-top:5em;
+    }
+
 }
 
