--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Karla', normal;
     display: flex;
@@ -17,11 +21,12 @@ body {
 
 a {
     text-decoration: none;
-    color: #0a2c47;;
+    color: #4f6070;
+    padding-top:-40px;
 }
 
 a:hover {
-    color:#009245;
+    color:#5ac0c5;
   }
 
 p {
@@ -29,14 +34,53 @@ p {
     margin-bottom: 1em;
 }
 
+h1 {
+    color: #4f6070;
+    font-weight: 600;
+    font-size: 3em;
+}
+
 h2 {
-    color: black;
-    font-size:1.5em;
-    padding-bottom:.2em;
+    color: #4f6070;
+    font-size:2.5em;
+    padding-bottom: .1em;
+    font-weight:500;
   }
+
+h3 {
+    color:#5ac0c5;
+    font-size:1.5em;
+    padding-bottom: .2em;
+    font-weight:400;
+}
+
+h4 {
+    color: #4f6070;
+    font-size: 1.3em;
+    font-weight:600;
+}
+
+h5 {
+    color: #000;
+    font-size: 1.3em;
+    padding-bottom:.3em;
+}
 
 img {
     max-width: 100%;
+}
+
+.break {
+    flex-basis:100%;
+    height:25px;
+}
+
+form {
+    max-width: 800px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: #f4f7f8;
+    border-radius: 8px;
 }
 
 /* Horizontal Nav */
@@ -55,7 +99,7 @@ img {
 }
 
 .nav-main li a:hover {
-    color: #009245;
+    color: #5ac0c5;
 }
 
 .nav-main ul {
@@ -143,7 +187,7 @@ img {
 }
 
 .nav-sidebar a:hover {
-    color: #009245;
+    color: #5ac0c5;
 }
 
 .menu-btn {
@@ -242,6 +286,7 @@ img {
     cursor: pointer;
     padding: 13px 15px;
     border-radius: 50%;
+    outline: none;
 }
 
 .buttons button:hover {
@@ -270,7 +315,7 @@ img {
 }
   
 .logo {
-    margin: 0 auto 5em auto;
+    margin: 0 auto 3em auto;
     z-index:10;
     width: 300px;
 }
@@ -282,24 +327,42 @@ img {
 /* Row 1 aka Featured Article */
 
 .row1 {
-    display:flex;
+    background-color:#f8f9fd;
+    padding:2em 2em 3em 2em;
 }
 
-.featured {
-    order:2;
-    padding: 2em 0 0 1em;
-    margin-right: 1em;
-  }
+.featured p {
+    color: #4f6070;
+}
 
 .featured-img {
-    max-width:200px;
+    max-width:250px;
     max-height:200px;
     flex-shrink: 0;
-    order:1;
-    margin: 0 1em 0 2em;
-    padding: 2em 0 0 0;
-    display:none;
+    margin: 0 auto;
+
   }
+
+.page-buttons {
+    padding: 1em 2em;
+    background-color:#fed45c;
+    color:#4f6070;
+    border: none;
+    border-radius: 5px;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.page-buttons:hover {
+    background-color: #4f6070;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+} 
+
+.center {
+    text-align:center;
+    margin: 0 auto;
+}
 
 /* What's New? */
 
@@ -335,8 +398,272 @@ img {
 /* Row 2 */
 
 .row2 {
+    background-color:#4f6070;
     display:flex;
-    padding: 0 3em;
+    padding: 2em 0 2em 0;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.stats {
+    max-width: 135px;
+    max-height: 80px;
+    margin:1em auto;
+}
+
+
+.numbers {
+    font-size: 70px;
+    color:#5ac0c5;
+}
+
+/* Row 3 */
+
+.col {
+	padding-right: 1.5em;
+    padding-left: 1.5em;
+    color: #4f6070;
+}
+
+.about {
+    margin: 0 auto;
+    text-align: center;
+    padding: 4em 1em 0 1em;
+}
+
+.row3 {
+    padding-bottom:4em;
+}
+
+.row3 hr {
+    margin: 1em auto;
+    width: 10%;
+}
+
+.numbers2 {
+    font-size: 60px;
+    font-weight:700;
+}
+
+/* Row 4 */
+
+.row4 {
+    width:100%;
+    height:500px;
+    background: #4f6070;
+    padding-top:7em;
+    transition: background-color 0.5s;
+}
+
+.testimonial {
+    margin: auto;
+    width: 90%;
+    color: #fff !important;
+    text-align: center; 
+}
+
+.testimonial h2 {
+    font-size:1.7em;
+}
+
+.row4 hr {
+    margin: 1em auto;
+    width: 10%;
+    color:white;
+}
+
+/* Row 5 */
+
+.row5 {
+    background-color:#f8f8f8;
+    justify-content: space-evenly;
+    padding: 4em 2em 4em 2em;
+}
+
+.row5 h2 {
+    font-size:2.3em;
+}
+
+.col2 {
+    padding-right: 1em;
+	padding-left: 1em;
+}
+
+.featured-img-2 {
+    flex-shrink: 0;
+  }
+
+
+/* Row 6 */
+
+.row6 {
+    padding: 4em 0 4em 0;
+}
+
+.row6 hr {
+    margin: 1.2em auto;
+    width: 15%;
+    color:#000;
+}
+
+.row6 h1 {
+    padding-bottom: .4em;
+}
+
+.contact,
+.phone-email {
+    text-align:center;
+}
+
+.contact {
+    padding: 0 2em;
+    margin: 0 auto;
+    width:90%;
+}
+
+.row6 a {
+    color:#5ac0c5;
+}
+
+.row6 a:hover {
+    color: #4f6070;
+}
+
+.phone-email {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    text-align:center;
+    margin: 0 auto;
+    align-content: center;
+}
+
+.phone,
+.email {
+    padding:2.5em 1em;
+    width:100%;
+}
+
+#phone,
+#email {
+    font-size:4em;
+}
+
+
+  
+form {
+    max-width: 700px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: #f4f7f8;
+    border-radius: 8px;
+  }
+  
+
+  
+  input[type="text"],
+  input[type="password"],
+  input[type="date"],
+  input[type="datetime"],
+  input[type="email"],
+  input[type="number"],
+  input[type="search"],
+  input[type="tel"],
+  input[type="time"],
+  input[type="url"],
+  textarea,
+  select {
+    background: rgba(255,255,255,0.1);
+    border: none;
+    font-size: 16px;
+    height: auto;
+    margin: 0;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
+    background-color: #e8eeef;
+    color: #8a97a0;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    margin-bottom: 30px;
+  }
+  
+  input[type="radio"],
+  input[type="checkbox"] {
+    margin: 0 4px 8px 0;
+  }
+  
+  select {
+    padding: 6px;
+    height: 32px;
+    border-radius: 2px;
+  }
+  
+.form-button {
+    padding: 19px 39px 18px 39px;
+    color: #FFF;
+    background-color: #4bc970;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    border-radius: 5px;
+    width: 100%;
+    border: 1px solid #3ac162;
+    border-width: 1px 1px 3px;
+    box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+    margin-bottom: 10px;
+  }
+  
+  fieldset {
+    margin-bottom: 30px;
+    border: none;
+  }
+  
+  legend {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
+  }
+  
+  label.light {
+    font-weight: 300;
+    display: inline;
+  }
+  
+  .number {
+    background-color: #5fcf80;
+    color: #fff;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+    font-size: 0.8em;
+    margin-right: 4px;
+    line-height: 30px;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+    border-radius: 100%;
+  }
+  
+  @media screen and (min-width: 480px) {
+  
+    form {
+      min-width: 700px;
+    }
+  
+  }
+  
+
+/* Footer */
+
+.footer {
+    background: #4f6070;
+    color: #fff;
+    text-align: center;
+    padding: 1.5em 0;
+    margin-top:3em;
 }
 
 /* Media Queries */
@@ -373,29 +700,168 @@ img {
     }
 
     .featured-img {
+        max-width:300px;
+        max-height:250px;
+        margin: 4em .5em 0 3em;
+        padding: 3.5em 1.5em 0 0;
+    }
+
+    .featured-img-2 {
         display:block;
+        max-width:350px;
+        max-height:350px;
+        padding-top:5em;
     }
 
     .featured {
-        margin-right: 2em;
+        margin-left:2em;
+        width:60%;
       }
 
-    .row2 {
-        margin: 0 3em;
+
+    .row1 {
+        display:flex;
+        padding: 2em 0 2em 0;
+    }
+
+
+    .row3 {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+        margin: 0 auto;
+        padding-top: 3em;
+        padding-bottom:4.5em;
+    }
+
+    .row4 {
+        display: flex;
+        justify-content: center;
+        padding:0;
+        background: url('../img/testimonial-bkg.jpg') no-repeat center center/cover;
+    }
+
+    .row5 {
+        display:flex;
+        padding: 4em 2em;
+    }
+
+    .row6 {
+        display: flex;
+        margin: 0 auto;
+        flex-direction: column;
+    }
+
+    .testimonial {
+        width: 70%;
+    }
+
+    .testimonial h2 {
+        font-size:2em;
+        }
+    
+
+    .col {
+        flex: 1 50%;
+    }
+
+    .col2 {
+        flex: 1;
+    }
+    
+
+    .about {
+        padding-top:1.5em;
+    }
+
+    .pricing {
+        width:50%;
+        padding-right:4em;
+    }
+
+    .phone-email {
+        flex-direction: row;
+    }
+
+    .contact {
+        width: 85%;
     }
 }
 
 @media (min-width: 1030px) {
     .row1 {
-        background-color:#fff;
         z-index:10;
-        width:70%;
-        margin: -7em auto 0; 
-        align-content:center;
+        width:85%;
+        margin: -6em auto 5em; 
+    }
+
+    .row2 {
+        z-index:5;
+        margin-top:-6.5em;
+        flex-direction:row;
+        padding: 4.5em 0 4em 0;
+    }
+
+    .row3 {
+        width:80%;
+    }
+
+    .row5 {
+        padding: 4em 0;
+    }
+    
+    .col {
+        flex-basis: 0;
     }
 
     .banner {
         margin-bottom: 2.5em;
     }
+
+    .testimonial {
+        width: 50%;
+    }
+
+    .featured-img {
+        max-width:350px;
+        max-height:300px;
+        margin: 1em 0 0 3em;
+        padding: 3.5em 2em 0 0;
+    }
+
+    .featured-img-2 {
+       padding-top:3em;
+    }
+
+    .primary2 {
+        flex: 2;
+    }
+    
+    .contact {
+        width: 75%;
+    }
 }
 
+
+@media (max-width: 900px) {
+
+
+    .pricing {
+        width:100%;
+    }
+
+    .featured-img-2 {
+        max-width:250px;
+        max-height:250px;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .featured-img-2 {
+        max-width:175px;
+        max-height:175px;
+        padding-top:2em;
+    }
+}
