--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Karla';
+    src: url('../fonts/karla-regular-webfont.woff2') format('woff2'),
+         url('../fonts/karla-regular-webfont.woff2') format('woff'),
+         url('../fonts/karla-italic-webfont.woff2') format('woff2'),
+         url('../fonts/karla-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -92,20 +103,12 @@ form {
     border-radius: 8px;
 }
 
-.dimmer {      
-    background:#000;
-    opacity:0.8;
-    position:fixed; 
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    display:none;
-    z-index:999; /* may not be necessary */
-}
-
 .anchor {
     scroll-margin-top:90px;
+}
+
+#dimmer {
+    transition: all 0.5s ease-in-out;
 }
 
 /* Horizontal Nav */
@@ -152,7 +155,7 @@ form {
 .nav-title {
     display:flex;
     font-size: 1.75em;
-    padding: 15px 0 15px 5px;
+    padding: 15px 0;
     line-height:60px;
     white-space: nowrap;
     order:1;
@@ -384,7 +387,7 @@ form {
 .page-buttons:hover {
     background-color: #4f6070;
     color: #fff;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 } 
 
 .center {
@@ -521,7 +524,7 @@ form {
 .featured-img-2 {
     flex-shrink: 0;
     position: relative;
-    z-index:999;
+    z-index:998;
   }
 
 
@@ -817,6 +820,11 @@ form {
     .contact {
         width: 85%;
     }
+
+    #dimmer {
+        transition: all 0.5s ease-in-out;
+        display: none;
+    }
 }
 
 @media (min-width: 1030px) {
@@ -895,4 +903,62 @@ form {
         max-height:175px;
         padding-top:2em;
     }
+}
+
+/* Popup box BEGIN */
+.hover_bkgr_fricc{
+    background:rgba(0,0,0,.4);
+    cursor:pointer;
+    display:none;
+    height:100%;
+    position:fixed;
+    text-align:center;
+    top:0;
+    width:100%;
+    z-index:10000;
+}
+.hover_bkgr_fricc .helper{
+    display:inline-block;
+    height:100%;
+    vertical-align:middle;
+}
+.hover_bkgr_fricc > div {
+    background-color: #fff;
+    box-shadow: 10px 10px 60px #555;
+    display: inline-block;
+    height: auto;
+    max-width: 551px;
+    min-height: 100px;
+    vertical-align: middle;
+    width: 60%;
+    position: relative;
+    border-radius: 8px;
+    padding: 15px 5%;
+}
+.popupCloseButton {
+    background-color: #fff;
+    border: 3px solid #999;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial;
+    font-weight: bold;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    font-size: 25px;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+}
+.popupCloseButton:hover {
+    background-color: #ccc;
+}
+.trigger_popup_fricc {
+    cursor: pointer;
+    font-size: 20px;
+    margin: 20px;
+    display: inline-block;
+    font-weight: bold;
 }
