--- a/css/style.css
+++ b/css/style.css
@@ -554,14 +554,16 @@ form {
     width: 70%; 
 }
   
-.close {
+.close,
+.close2 {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
   
-.close:hover {
+.close:hover,
+.close2:hover {
     color: black;
     text-decoration: none;
     cursor: pointer;
