--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,43 @@ form {
     font-weight:700;
 }
 
+.array hr {
+    color: #000;
+}
+
+#adjectives {
+    font-size: 1.3em;
+    line-height:1.3em;
+    font-weight:600;
+}
+
+#last {
+    font-size: 1.5em;
+    line-height:1.5em;
+    font-weight:600;
+}
+
+#last i {
+    color:#5ac0c5;
+    font-size: 1.3em;
+}
+
+div.dollar-sign{
+    position:relative;
+    
+}
+    
+div.dollar-sign input{
+    padding-left: 20px;
+}
+    
+div.dollar-sign:after{
+    position: absolute;
+    left: 6px;
+    top: 14.5px;
+    content: '$';
+}
+
 /* Row 4 */
 
 .row4 {
@@ -640,7 +677,7 @@ select {
     padding: 15px;
     width: 100%;
     background-color: #e8eeef;
-    color: #8a97a0;
+    color: #000;
     box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
     margin-bottom: 30px;
   }
