--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ form {
 }
 
 .stats {
-    max-width: 135px;
+    max-width: 170px;
     max-height: 80px;
     margin:1em auto;
 }
@@ -478,6 +478,10 @@ form {
     font-weight:700;
 }
 
+.tertiary a {
+    color: #c1272d;
+}
+
 .array hr {
     color: #000;
 }
@@ -497,22 +501,6 @@ form {
 #last i {
     color:#5ac0c5;
     font-size: 1.3em;
-}
-
-div.dollar-sign{
-    position:relative;
-    
-}
-    
-div.dollar-sign input{
-    padding-left: 20px;
-}
-    
-div.dollar-sign:after{
-    position: absolute;
-    left: 6px;
-    top: 14.5px;
-    content: '$';
 }
 
 /* Row 4 */
@@ -592,7 +580,8 @@ div.dollar-sign:after{
 }
   
 .close,
-.close2 {
+.close2,
+.close3 {
     color: #aaa;
     float: right;
     font-size: 28px;
@@ -600,7 +589,8 @@ div.dollar-sign:after{
 }
   
 .close:hover,
-.close2:hover {
+.close2:hover,
+.close3:hover {
     color: black;
     text-decoration: none;
     cursor: pointer;
