--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,6 @@ img {
     height:25px;
 }
 
-form {
-    max-width: 800px;
-    margin: 10px auto;
-    padding: 10px 20px;
-    background: #f4f7f8;
-    border-radius: 8px;
-}
-
 .anchor {
     scroll-margin-top:90px;
 }
@@ -479,17 +471,26 @@ form {
 }
 
 .tertiary a {
-    color: #c1272d;
+    color: darkred;
+}
+
+.array p {
+    line-height:.5em;
 }
 
 .array hr {
     color: #000;
 }
 
+.array li:nth-child(even) {
+    color:#5ac0c5;
+}
+
 #adjectives {
     font-size: 1.3em;
     line-height:1.3em;
     font-weight:600;
+    list-style-type: none;
 }
 
 #last {
@@ -573,7 +574,7 @@ form {
 
 .popup-content {
     background-color: #fefefe;
-    margin: 30% auto; 
+    margin: 20% auto; 
     padding: 20px;
     border: 1px solid #888;
     width: 70%; 
@@ -648,15 +649,14 @@ form {
     width:100%;
 }
 
-#phone,
-#email {
+#phoneIcon,
+#emailIcon {
     font-size:4em;
 }
 
-  
 input[type="text"],
 input[type="email"],
-input[type="tel"],
+input[type="password"],
 select {
     background: rgba(255,255,255,0.1);
     border: none;
@@ -671,7 +671,7 @@ select {
     box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
     margin-bottom: 30px;
   }
-  
+
 select {
     padding: 6px;
     height: 32px;
@@ -768,7 +768,7 @@ select {
     }
 
     .popup-content {
-        margin: 18% auto; 
+        margin: 16% auto; 
     }
 
     .row6 {
@@ -872,7 +872,7 @@ select {
     }
 
     .popup-content {
-        margin: 10% auto; 
+        margin: 8% auto; 
     }
 }
 
@@ -899,3 +899,4 @@ select {
         padding-top:2em;
     }
 }
+
