--- a/css/style.css
+++ b/css/style.css
@@ -292,13 +292,13 @@ img {
 
 .buttons button#next {
     position: absolute;
-    top: 50%;
+    top: 400px;
     right: 15px;
 }
 
 .buttons button#prev {
     position: absolute;
-    top: 50%;
+    top: 400px;
     left: 15px;
 }
 
@@ -340,7 +340,7 @@ img {
 .logo {
     margin: 0 auto 3em auto;
     z-index:10;
-    width: 250px;
+    width: 225px;
 }
 
 /* Row 1 aka Featured Article */
@@ -521,7 +521,7 @@ img {
 .popup-content {
     background-color: #fefefe;
     margin: 20% auto; 
-    padding: 20px;
+    padding: 14px;
     border: 1px solid #888;
     width: 70%; 
 }
